--- a/setup/roles/docker-ce/tasks/main.yaml
+++ b/setup/roles/docker-ce/tasks/main.yaml
@@ -11,7 +11,7 @@
 
 - name: repository
   ansible.builtin.apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu focal stable
+    repo: deb https://download.docker.com/linux/ubuntu noble stable
     state: present
     filename: docker
 
